--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
     background-color: peachpuff; 
 }
 
+.button-wrap {
+    margin-left: 432px;
+}
+
 .mini-grid {
     width: 80px;
     height: 80px;
@@ -31,4 +35,5 @@
 
 .container {
     display: flex;
+    justify-content: center;
 }
